# neuralbridge

./: .env.example  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATE/: welcome.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-docker.yml  publish-pypi.yml  release.yml
adapters/: index.html
adapters/apis/: index.html
adapters/cloud/: index.html
adapters/custom/: index.html
adapters/databases/: index.html
adapters/messaging/: index.html
api-reference/: index.html
architecture/: index.html
contributing/: index.html
dashboard/: index.html
deploy/: prometheus.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/k8s/: deployment.yaml
docs/: adapters.md  api-reference.md  architecture.md  contributing.md  dashboard.md  getting-started.md  index.md  introduction.md  roadmap.md
docs/adapters/: apis.md  cloud.md  custom.md  databases.md  index.md  messaging.md
docs/security/: compliance.md  index.md  sandboxing.md
examples/: openclaw_integration.py  quickstart.py
examples/configs/: multi_adapter.yaml  salesforce.yaml
getting-started/: index.html
introduction/: index.html
notebooks/: 01_getting_started.ipynb  02_cra_compliance.ipynb
requirements/: base.txt  dev.txt  prod.txt  test.txt
roadmap/: index.html
search/: search_index.json
security/: index.html
security/compliance/: index.html
security/sandboxing/: index.html
src/dashboard/: index.html  package.json  tailwind.config.js  vite.config.ts
src/dashboard/src/: App.tsx  index.css
src/dashboard/src/components/: AdapterConfig.tsx  AuditViewer.tsx  ComplianceDashboard.tsx  ConnectionWizard.tsx  CostOptimizer.tsx
src/neuralbridge/: __init__.py  config.py  main.py
src/neuralbridge/adapters/: __init__.py  base.py
src/neuralbridge/adapters/apis/: graphql.py  odata.py  rest.py  soap.py
src/neuralbridge/adapters/cloud/: aws_s3.py  azure_blob.py  gcs.py
src/neuralbridge/adapters/custom/: adapter_template.py
src/neuralbridge/adapters/databases/: bigquery.py  mongodb.py  mysql.py  postgres.py  snowflake.py
src/neuralbridge/adapters/erp_crm/: salesforce.py  sap.py
src/neuralbridge/adapters/messaging/: discord.py  email_smtp.py  slack.py  teams.py  telegram.py
src/neuralbridge/adapters/productivity/: gmail.py  notion.py
src/neuralbridge/api/: __init__.py  dependencies.py
src/neuralbridge/api/routes/: __init__.py  adapters.py  compliance.py  connections.py  health.py  logs.py
src/neuralbridge/compliance/: __init__.py  cra_report.py  gdpr_report.py  incident_log.py  sbom.py
src/neuralbridge/core/: __init__.py  executor.py  gateway.py  router.py
src/neuralbridge/optimization/: __init__.py  batching.py  cache.py  token_estimator.py
src/neuralbridge/security/: __init__.py  audit.py  auth.py  encryption.py  rate_limit.py  rbac.py  sandbox.py
src/neuralbridge/utils/: __init__.py  logger.py  openclaw_plugin.py  validators.py
tests/: __init__.py  conftest.py  test_adapters.py  test_api.py  test_compliance.py  test_sandbox.py  test_security.py
